tester/tests/compile-pass/function-local-variable.srv

fn variable() -> String
    let x = "Hello World"
    x
end
