tester/tests/compile-fail/conditional-mismatch-types.srv


fn badconditional() -> String

    if "Hello"
        1
    else
        "World"
    end

    "Hello"
end
